--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 *.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.gradle/
+local.properties
+.idea/
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-google-services.json
+build/
+captures/
+.externalNativeBuild/
+.cxx/
